# uGDS

./: CMakeLists.txt  README.md
docs/: installation.md
drv/: Makefile  ioctl.h  map.c  map.h  pci.c
drv/test/: sg_flatten_test.c
include/: ugds.h
include/libnvm/: nvm_admin.h  nvm_cmd.h  nvm_ctrl.h  nvm_dma.h
scripts/: run_tests.sh
src/: ugds_batch.cpp  ugds_buf.cpp  ugds_handle.cpp  ugds_hugepage.cpp  ugds_internal.h  ugds_io.cpp
src/libnvm/: admin.cpp  ctrl.cpp  linux_device.cpp  linux_dma.cpp  rpc.cpp
src/libnvm/internal/: ioctl.h  map.h
test/functional/: test_alignment_errors.cu  test_async_multi_stream.cu  test_batch_basic.cu  test_batch_deep.cu  test_batch_errors.cu  test_batch_mixed_ops.cu  test_batch_mixed_sizes.cu  test_batch_reuse.cu  test_buf_register.cu  test_concurrent_qps.cu  test_cq_dw11.cu  test_interrupt_ioctls.cu  test_interrupt_mode.cu  test_multi_offset.cu  test_read_write_basic.cu  test_read_write_large.cu  test_read_write_unregistered.cu  test_utils.h
test/perf/: bench_utils.h  cufile_bench.cu
